tests/error/vararg_invalid_acces.gw
#! [contains] InvalidVariadicAccess
fun void test(...) {
  varloop vararg {
    <<<vararg $ int >>>;
  }
}
new Object => test;
